--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-*.class
+### Maven template
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
+### Java template
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -10,3 +20,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Created by .ignore support plugin (hsz.mobi)
+
+# IntelliJ IDEA
+*.iml
+.idea/
+.idea_modules/
